# SoftRenderer

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md
SoftRender/: CMakeLists.txt  Camera.cpp  FrameBuffer.cpp  FrameBuffer.h  Graphics.cpp  Graphics.h  Image.h  MathUtils.cpp  Mesh.cpp  Pipeline.h  Program.h  Render.h  Shader.cpp  SoftRender.cpp  Texture.cpp  Texture.h  Utils.h  Window.cpp  Window.h
src/: BlinnPhongShader.h  BoxSphereBounds.h  Buffer.h  Camera.cpp  Camera.h  Event.h  FrameBuffer.cpp  FrameBuffer.h  Graphics.cpp  Graphics.h  Image.cpp  Image.h  ImageLoader.cpp  ImageLoader.h  Input.h  InputManager.cpp  InputManager.h  Material.cpp  Material.h  MathUtils.cpp  MathUtils.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  OrbitControls.cpp  OrbitControls.h  Pipeline.cpp  Program.cpp  SceneLoader.cpp  SceneLoader.h  SceneNode.h  SceneObject.h  Shader.cpp  Shader.h  ShaderManagement.cpp  ShaderManagement.h  Singleton.h  SkyboxShader.h  SoftRender.cpp  (+10 more)
